# ZONE-GPT

./: .flake8  .gitignore  .pylintrc  ARCHITECTURE.md  CONFIGURATION.md  CONVERSION_SUMMARY.md  MANIFEST.in  MIGRATION.md  README.md  SETUP.md  copilot-instructions  copilot-instructions.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml  pylint.yml  python-package-conda.yml  python-publish.yml
agents/: strategy.md
core/: DEPRECATED.md  main.py
core/routes/: __init__.py  repo_routes.py
knowledge_vault/: README.md
src/zone_gpt/: __init__.py  app.py  audit.py  cli.py
src/zone_gpt/routes/: __init__.py  repo_routes.py
tests/: __init__.py
tests/unit/: test_app.py  test_audit.py  test_routes.py
